--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,118 @@
-*{
-  padding:0;
-  margin:0;
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+
+.banner {
+  width: 100%;
+  height: 300px;
+  background: linear-gradient(45deg, #3eb9d7, #000000);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+}
+
+
+.sidebar {
+  height: 100%;
+  width: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.9); 
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+}
+
+/* Sidebar links */
+.sidebar a {
+  padding: 10px 20px;
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidebar a:hover {
+  background-color: #575757;
+}
+
+/* Sluitknop */
+.sidebar .closebtn {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 36px;
+  color: white;
+}
+
+/* Menu knop (in de banner) */
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #111;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.openbtn:hover {
+  background-color: #444;
+}
+
+/* Banner tekst */
+.banner-content {
+  color: white;
+  padding: 20px;
+}
+
+.banner-content h1 {
+  font-size: 40px;
+  margin-bottom: 135px;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+}
+
+/* Style the navigation bar */
+.navbar {
+  width: 100%;
+  background-color: #555;
+  overflow: auto;
+}
+
+
+.navbar a {
+  float: center;
+  text-align: center;
+  padding: 12px;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+
+.navbar a:hover {
+  background-color: #000;
+}
+
+
+.active {
+  background-color: #04AA6D;
+}
+
+
+@media screen and (max-width: 500px) {
+  .navbar a {
+    float: none;
+    display: block;
+  }
 }
