--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ body {
 
 .container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
   padding: 0px;
   width: 100%;
@@ -144,6 +144,8 @@ body {
 
 .prijs {
   font-size: 35px;
+  color: #000000; 
+  font-weight: bold;
 }
 
 .footer {
@@ -156,4 +158,6 @@ body {
   bottom: 0;
   left: 0;
 }
+
+
 
