--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,14 +15,14 @@ body {
   position: relative;
 }
 
-/* The sidebar menu */.sidebar {
+.sidebar {
   height: 100%;
   width: 0;
   position: fixed;
   z-index: 1;
   top: 0;
   right: 0;
-  background-color: #29606e;
+  background-color: #333;
   overflow-x: hidden;
   padding-top: 20px;
   transition: 0.5s;
@@ -49,7 +49,7 @@ body {
 .openbtn {
   font-size: 20px;
   cursor: pointer;
-  background-color: #000;
+  background-color: #333;
   color: white;
   padding: 10px 15px;
   border: none;
@@ -68,12 +68,12 @@ body {
 .banner-content h1 {
   font-size: 40px;
   margin-bottom: 135px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  text-shadow: 2px 2px 4px rgba(132, 130, 130, 0.2);
 }
 
 .navbar {
   width: 100%;
-  background-color: #000000;
+  background-color: #333;
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -84,7 +84,12 @@ body {
   text-decoration: none;
   font-size: 20px;
 }
+.navbar img{
 
+  justify-content: left;
+  width: 90px;
+
+}
 .navbar a:hover {
   background-color: #000;
 }
@@ -158,6 +163,8 @@ body {
   bottom: 0;
   left: 0;
 }
+
+
 
 
 
