--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,19 +3,8 @@ body {
   font-family: Arial, sans-serif;
 }
 
-.banner {
-  width: 100%;
-  height: 300px;
-  background: linear-gradient(45deg, #3eb9d7, #000000);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  position: relative;
-}
 
-.sidebar {
+.banner {
   height: 100%;
   width: 0;
   position: fixed;
@@ -26,6 +15,17 @@ body {
   overflow-x: hidden;
   padding-top: 20px;
   transition: 0.5s;
+
+}
+
+.sidebar h3{
+
+  color: #ffffff;
+}
+
+.sidebar label{
+
+  color: #ffffff;
 }
 
 .sidebar a {
