--- a/bestel/css/style.css
+++ b/bestel/css/style.css
@@ -3,6 +3,7 @@ body {
   background-color: #f4f4f4;
   margin: 0;
   padding: 0;
+  max-width: 100%;
 }
 
 /* NAVBAR */
@@ -22,7 +23,7 @@ body {
 }
 
 .navbar a:hover {
-  background-color: #575757;
+  background-color: #000000;
 }
 
 .container {
