--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,14 +40,14 @@
   }
   
   .navbar a:hover {
-    background-color: #000;
+    background-color: #565656;
   }
   
-  /* Rest van je CSS blijft hetzelfde */
+
   
 /* Sidebar instellingen */
 .sidebar {
-  height: 100%; /* Correctie van de hoogte */
+  height: 100%; 
   width: 0;
   position: fixed;
   top: 0;
@@ -61,7 +61,7 @@
 .sidebar a {
   padding: 15px;
   text-decoration: none;
-  font-size: 18px; /* Kleinere fontgrootte */
+  font-size: 18px; 
   color: white;
   display: block;
   transition: 0.3s;
@@ -110,7 +110,7 @@
   border-radius: 5px;
 }
 
-/* Hover effect voor de product-kaarten */
+
 .product-card:hover {
   transform: translateY(-5px);
   box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
@@ -130,8 +130,7 @@
   text-align: center;
   padding: 20px;
   width: 100%;
-  position: relative;
-  bottom: 0;
+  position: bottom;
 }
 
 /* Media query voor kleinere schermen */
