--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 body {
-  margin: 0;
   font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
 }
 
 /* Navigatie */
@@ -123,14 +126,7 @@ body {
   color: #333;
 }
 
-/* Footer styling */
-.footer {
-  background-color: #333;
-  color: white;
-  text-align: center;
-  padding: 20px;
-  width: 100%;
-}
+
 
 
 @media screen and (max-width: 768px) {
@@ -170,6 +166,8 @@ body {
   }
 }
 
+
+
 /* Prijsschuif stijl */
 .price-filter {
   position: absolute;
@@ -203,3 +201,59 @@ body {
 #priceSlider:focus {
   background: #888;
 }
+
+/* Algemene footer styling */
+.footer {
+  background-color: #333;
+  color: white;
+  padding: 20px 0;
+  font-family: Arial, sans-serif;
+  text-align: center;
+}
+
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1200px;
+  margin: auto;
+  padding: 10px;
+}
+
+.footer-section {
+  flex: 1;
+  padding: 10px;
+  min-width: 250px;
+  text-align: left;
+}
+
+.footer-section h3 {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.footer-section p {
+  font-size: 14px;
+  margin: 5px 0;
+}
+
+.payment-methods {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.payment-methods img {
+  width: 85px;
+  height: auto;
+}
+
+/* Footer onderkant */
+.footer-bottom {
+  background-color: #3a1d1d;
+  padding: 10px;
+  margin-top: 20px;
+  font-size: 14px;
+}
+
